--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@mantine/core": "^8.0.2",
     "@mantine/hooks": "^8.0.2",
+    "@reduxjs/toolkit": "^2.8.2",
     "@tabler/icons-react": "^3.33.0",
     "@tailwindcss/vite": "^4.1.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
     "tailwindcss": "^4.1.8"
   },
