--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "@mantine/core": "^8.0.2",
+    "@mantine/dropzone": "^8.0.2",
     "@mantine/hooks": "^8.0.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@tabler/icons-react": "^3.33.0",
