--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
+    "react-select": "^5.10.1",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.8"
   },
